--- a/ethBucket.cfg
+++ b/ethBucket.cfg
@@ -9,8 +9,10 @@ c0dc2fc63067b4e2168d92f5 = a
 340b1499bce051bb997c7cbe = f
 334bface4de8d5e58652ddf2 = f
 f5d9b9a4e530d78b80840fd4 = f
+8a1dbeb1730222cb2d96315c = a
+ed8eea00d8fbbd93d7d7c8c1 = f
 
 [Files open for edit]
 a = true
-c0dc2fc63067b4e2168d92f5 = true
+f = true
 
